# short-urls

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  file.py  pyproject.toml  stuff.py
url-shortener/: .coveragerc  app_lifespan.py  file.py  main.py  manage.py  shorts.json
url-shortener/api/: tools.py
url-shortener/api/v1/: __init__.py
url-shortener/api/v1/short_url/: crud.py  dependencies.py  redis_dependency.py  schemas.py  views.py
url-shortener/api/v1/short_url/auth/service/: __init__.py  redis_tokens.py  redis_user.py
url-shortener/commands/: cli.py  hello.py  tokens.py
url-shortener/core/: config.py
url-shortener/schemas/: short_url.py
url-shortener/testing/test_api_v1/test_schemas/: test_short_url.py
url-shortener/testing/test_api_v1/test_services/: test_redis_token.py
url-shortener/testing/test_api_v1/test_short_url/: test_crud.py
url-shortener/testing/test_api_v1/test_short_url_services/: test_redis_short_url_services.py
