[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.9.0",
    "fastapi[standard]>=0.115.12",
    "redis[hiredis]>=6.1.0",
    "ruff>=0.11.12",
]

[dependency-groups]
dev = [
    "coverage>=7.9.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]

# mypy
[tool.mypy]
strict = true

# ruff
[tool.ruff]

# игнорирование
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    '.venv',
    'testing'
]

# откуда проверять
src = ['url-shortener']

# Same as Black.
line-length = 88
indent-width = 4

# с каким питоном работаем
target-version = "py313"

[tool.ruff.lint]
select = [
    "FAST", # FastAPI
    "ANN", # flake8-annotation
    "I", # isort
    "F", # PyFlakes
]
ignore = ["S101", "S311"]

# то что ruff может сам починить
unfixable = []
# Игнорировать определенный файл правилом
[tool.ruff.lint.extend-per-file-ignores]
"stuff.py" = ["T20"]
